#ifndef CHICAGOSTYLEVEGGIEPIZZA_H
#define CHICAGOSTYLEVEGGIEPIZZA_H
#include "Pizza.h"
class ChicagoStyleVeggiePizza : public Pizza
{
    public:
    ChicagoStyleVeggiePizza();
    ~ChicagoStyleVeggiePizza();
    void box();

};


#endif